samples/_failures_safe/1761564732_feb2c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a115df3c.c: In function ‘main’:
./samples/SAFE/__tmp_a115df3c.c:156:5: error: expected declaration or statement at end of input
  156 |     uint8_t test_data[] = "AAAABBBBCCCCDDDDEEEEFFFFGGGGHHHHIIIIJJJJKKKKLLLLMMMMNNNNOOOOPPPPQQQQRRRRSSSSTTTTUUUUVVVVWWWWXXXXYYYYZZZZ";
      |     ^~~~~~~
